# FinFlow-rl

./: .gitignore  .python-version  1_success.py  ARCHITECTURE.md  Architecture.md  README.md  config.py  constant.py  immune_visualization.py  main.py  past.py  pyproject.toml  pytest.ini  requirements.txt  test_refactoring.py
BIPD/: html_dashboard.py  immune_visualization.py  main.py
QSPM/: main.py
agents/: __init__.py  base.py  bcell.py  memory.py  tcell.py
bipd/: README.md  config.py  requirements.txt
configs/: default.yaml  default_irt.yaml  research_sharpe_cvar.yaml  test_1episode.yaml  test_1episode_td3bc.yaml  test_1episode_tqc.yaml  test_checkpoint.yaml  test_objectives.yaml  test_quick.yaml
core/: advantage.py  backtester.py  curriculum.py  environment.py  hierarchical.py  retrace.py  reward.py  system.py  trainer.py  value_norm.py
data/: __init__.py  benchmark_data_SPY-QQQ_2020-08-10_2020-12-31.pkl  features.py  loader.py  market_data_AAPL_MSFT_AMZN_2008-01-02_2024-12-31.pkl  market_data_AAPL_MSFT_AMZN_GOOGL_AMD_2008-01-02_2024-12-31.pkl  portfolio_data_AAPL_AMD_AMZN_GOOGL_JNJ_JPM_MSFT_PG_TSLA_V_2008-01-02_2024-12-31.pkl  portfolio_data_AAPL_AMZN_GOOGL_JNJ_JPM_MSFT_NVDA_PG_TSLA_V_2008-01-02_2024-12-31.pkl  portfolio_data_AAPL_AMZN_GOOGL_MSFT_2020-01-01_2021-01-01.pkl  stock_data_2008-01-02_2020-12-31.pkl  stock_data_2021-01-01_2024-12-31.pkl
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  EVALUATION.md  GRADIENT_STABILIZATION.md  HANDOVER.md  IMPROVEMENTS.md  IRT.md  IRT_ARCHITECTURE.md  JSON_FORMAT.md  MAIN_USAGE.md  REFACTORING.md  SCRIPTS.md  TRAINING.md  XAI.md
(+275 files in other folders)
